<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/emergencyback"
    tools:context=".Emergency_report"
    tools:ignore="ScrollViewCount">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraintLayout"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/headtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="Select emergency type"
            android:textAlignment="center"
            android:textColor="@color/maroon"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row1"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.00"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headtext">
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/card1"
                android:layout_margin="10dp"
                android:background="@color/cardview_light_background"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/fireName"
                        android:text="@string/fire"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/fireImage"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/fireImage"
                        android:contentDescription="@string/fireimage"
                        android:src="@drawable/firebg"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/card2"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/accidentName"
                        android:text="@string/road_accident"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/accidentImage"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/accidentImage"
                        android:contentDescription="@string/accident"
                        android:src="@drawable/accidentbg"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row2"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.00"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/row1">
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/card3"
                android:layout_margin="10dp"
                android:background="@color/cardview_light_background"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/securityName"
                        android:text="Security"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/securityImage"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/securityImage"
                        android:contentDescription="@string/fireimage"
                        android:src="@drawable/securitybg"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/card4"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/healthName"
                        android:text="Health"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/healthImage"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/healthImage"
                        android:contentDescription="health"
                        android:src="@drawable/healthbg"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:id="@+id/row3"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/row2">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:id="@+id/card5"
                android:layout_margin="0dp"
                android:background="@color/maroon"
                android:layout_weight="1"
                app:cardElevation="20dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/otherName"
                        android:text="other type of emergency"
                        android:textSize="15sp"
                        android:textColor="@color/maroon"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_marginTop="10dp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:id="@+id/row4"
            android:orientation="vertical"
            android:layout_marginTop="2dp"
            android:padding="5dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/row3">

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/logoutButton"
                android:text="logout"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/maroon"
                app:cornerRadius="20dp"/>
            <TextView
                android:id="@+id/responder_login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="0dp"
                android:text="Login as a responder"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>